--- a/src/TerminalUIWpf/Views/AppView.xaml
+++ b/src/TerminalUIWpf/Views/AppView.xaml
@@ -2,25 +2,26 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:TerminalUIWpf.Views"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="AppView"
         Width="800"
         Height="600"
+        AllowDrop="False"
+        Focusable="False"
+        WindowState="Maximized"
+        WindowStyle="None"
         mc:Ignorable="d">
 
 
     <Window.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
             <Setter Property="FontSize" Value="24" />
-            <Setter Property="MaxWidth" Value="600" />
-            <Setter Property="MaxHeight" Value="200" />
-            <Setter Property="Width" Value="500" />
-            <Setter Property="Height" Value="100" />
+            <Setter Property="Width" Value="700" />
+            <Setter Property="Height" Value="300" />
             <Setter Property="Background" Value="{Binding Path=ColorBtn, Mode=OneWay}" />
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Margin" Value="10" />
+            <Setter Property="IsEnabled" Value="{Binding Path=BtnEnable, Mode=OneWay}" />
         </Style>
     </Window.Resources>
 
@@ -52,12 +53,11 @@
 
         <StackPanel Grid.Row="1"
                     Grid.Column="0"
-                    HorizontalAlignment="Center"
+                    HorizontalAlignment="Stretch"
                     VerticalAlignment="Center">
 
             <Button Name="BtnVilage"
                     Content="Электропоезд"
-                    IsEnabled="{Binding Path=BtnEnable, Mode=OneWay}"
                     Style="{StaticResource ButtonStyle}" />
 
             <Button Name="BtnLongRoad"
