--- a/src/TerminalUIWpf/Views/DialogView.xaml
+++ b/src/TerminalUIWpf/Views/DialogView.xaml
@@ -2,22 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:TerminalUIWpf.Views"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="DialogView"
-        Width="800"
-        Height="600"
-        Background="White"
+        AllowDrop="False"
+        Focusable="False"
+        WindowState="Maximized"
+        WindowStyle="None"
         mc:Ignorable="d">
 
     <Window.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
             <Setter Property="FontSize" Value="24" />
-            <Setter Property="MaxWidth" Value="600" />
-            <Setter Property="MaxHeight" Value="200" />
-            <Setter Property="Width" Value="500" />
-            <Setter Property="Height" Value="100" />
-            <Setter Property="Background" Value="{Binding Path=ColorBtn, Mode=OneWay}" />
+            <Setter Property="Width" Value="700" />
+            <Setter Property="Height" Value="300" />
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Background" Value="SlateGray" />
             <Setter Property="Foreground" Value="White" />
@@ -42,7 +38,7 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    Background="White"
-                   FontSize="50"
+                   FontSize="60"
                    Foreground="Black"
                    Padding="5"
                    TextAlignment="Center" />
@@ -53,14 +49,14 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    Background="White"
-                   FontSize="50"
+                   FontSize="60"
                    Foreground="Black"
                    Padding="5"
                    TextAlignment="Center" />
 
         <StackPanel Grid.Row="2"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
 
             <Button Name="BtnOk"
                     Content="Принять"
