--- a/src/ServerUIWpf/ServerUiWpf/Views/AppView.xaml
+++ b/src/ServerUIWpf/ServerUiWpf/Views/AppView.xaml
@@ -1,17 +1,21 @@
 ﻿<Window x:Class="ServerUi.Views.AppView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ctrl="clr-namespace:Itenso.Windows.Controls.ListViewLayout;assembly=Itenso.Windows.Controls.ListViewLayout"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="AppView"
         Width="800"
         Height="600"
+        AllowDrop="False"
+        Focusable="False"
+        WindowState="Maximized"
+        WindowStyle="None"
         mc:Ignorable="d">
 
 
     <Window.Resources>
         <Style x:Key="TextBoxStyle" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="35" />
+            <Setter Property="FontSize" Value="55" />
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Margin" Value="5" />
@@ -31,7 +35,7 @@
             <!--<Setter Property="OverridesDefaultStyle" Value="True" />-->
             <Setter Property="Foreground" Value="Black" />
             <Setter Property="FontFamily" Value="Segoe UI" />
-            <Setter Property="FontSize" Value="45" />
+            <Setter Property="FontSize" Value="85" />
             <Setter Property="Background" Value="Crimson" />
             <Setter Property="HorizontalContentAlignment" Value="Center" />
         </Style>
@@ -47,6 +51,7 @@
 
         <ListView Name="TicketItems"
                   Grid.Row="0"
+                  ctrl:ListViewLayoutManager.Enabled="true"
                   Background="{Binding Path=ColorBackground,
                                        Mode=OneWay}">
 
@@ -85,7 +90,7 @@
 
             <ListView.View>
                 <GridView ColumnHeaderContainerStyle="{StaticResource ListHeaderStyle}">
-                    <GridViewColumn Width="500" Header="Номер билета">
+                    <GridViewColumn ctrl:ProportionalColumn.Width="1" Header="Номер билета">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Style="{StaticResource TextBoxStyle}" Text="{Binding Path=TicketName}" />
@@ -93,7 +98,7 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Width="500" Header="Касса">
+                    <GridViewColumn ctrl:ProportionalColumn.Width="1" Header="Касса">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Style="{StaticResource TextBoxStyle}" Text="{Binding Path=CashierName}" />
@@ -106,59 +111,17 @@
         </ListView>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Button Name="V1_Add"
-                    Width="50"
-                    Height="50"
+            <Button Name="Add"
+                    Width="100"
+                    Height="100"
                     Margin="5"
-                    Content="V1_Add" />
+                    Content="Add" />
 
-            <Button Name="V1_Sucsess"
-                    Width="50"
-                    Height="50"
+            <Button Name="Remove"
+                    Width="100"
+                    Height="100"
                     Margin="5"
-                    Content="V1_Sucsess" />
-
-            <Button Name="V1_Error"
-                    Width="50"
-                    Height="50"
-                    Margin="5"
-                    Content="V1_Error" />
-
-            <Button Name="V2_Add"
-                    Width="50"
-                    Height="50"
-                    Margin="40,5,5,5"
-                    Content="V2_Add" />
-
-            <Button Name="V2_Sucsess"
-                    Width="50"
-                    Height="50"
-                    Margin="5"
-                    Content="V2_Sucsess" />
-
-            <Button Name="V2_Error"
-                    Width="50"
-                    Height="50"
-                    Margin="5"
-                    Content="V2_Error" />
-
-            <Button Name="V3_Add"
-                    Width="50"
-                    Height="50"
-                    Margin="40,5,5,5"
-                    Content="V3_Add" />
-
-            <Button Name="V3_Sucsess"
-                    Width="50"
-                    Height="50"
-                    Margin="5"
-                    Content="V3_Sucsess" />
-
-            <Button Name="V3_Error"
-                    Width="50"
-                    Height="50"
-                    Margin="5"
-                    Content="V3_Error" />
+                    Content="Remove" />
         </StackPanel>
     </Grid>
 </Window>
